Xử lý dữ liệu và lưu ra file

--- a/notebooks/01_data_exploration.ipynb
+++ b/notebooks/01_data_exploration.ipynb
@@ -457,6 +457,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d77dea9a",
+   "metadata": {},
+   "source": [
+    "#### Có cột nào chứa giá trị sai logic không?\n",
+    "Kiểm tra xem trên từng dòng, giá trị của 2 cột `last_new_job` và `experience` đã đúng logic chưa. Có trường hợp `last_new_job > experience` không?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0bcf7b87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Số lượng dòng vô lý: 350\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lấy dữ liệu tạm để kiểm tra\n",
+    "# convert tạm thời 2 cột này sang float để kiểm tra\n",
+    "temp_exp = dp.convert_experience(data[:, col_idx['experience']])\n",
+    "temp_job = dp.convert_last_new_job(data[:, col_idx['last_new_job']])\n",
+    "\n",
+    "invalid_rows = np.sum(temp_job > temp_exp)\n",
+    "print(f\"Số lượng dòng vô lý: {invalid_rows}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7941cbea",
+   "metadata": {},
+   "source": [
+    "Sau khi kiểm tra thì thấy có 350 dòng vô lý, cần được xử lý."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9d4daa52",
    "metadata": {},
    "source": [
@@ -465,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "54622e79",
    "metadata": {},
    "outputs": [
@@ -530,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "09b733c3",
    "metadata": {},
    "outputs": [
@@ -583,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "190e0968",
    "metadata": {},
    "outputs": [
@@ -648,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "09265a12",
    "metadata": {},
    "outputs": [
@@ -706,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "0486b4b8",
    "metadata": {},
    "outputs": [
@@ -785,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "abfb5992",
    "metadata": {},
    "outputs": [
@@ -846,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "275ab20d",
    "metadata": {},
    "outputs": [
@@ -910,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "1fcec358",
    "metadata": {},
    "outputs": [
@@ -977,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "ef4608b7",
    "metadata": {},
    "outputs": [
@@ -1035,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "e4cab6a7",
    "metadata": {},
    "outputs": [
@@ -1091,7 +1132,7 @@
     "- Nhóm Phd (Tiến sĩ) và Primary School (Tiểu học) có tỷ lệ đổi việc thấp hơn.\n",
     "3. `major_discipline` (Chuyên ngành):\n",
     "- Các cột chiều cao khá tương đồng nhau.\n",
-    "- Kết luận: Chuyên ngành học (STEM hay Art hay Business) không ảnh hưởng nhiều đến quyết định nhảy việc. Điều này gợi ý rằng biến này có thể không quan trọng lắm cho mô hình (Feature Importance thấp).\n",
+    "- Kết luận: Chuyên ngành học (STEM hay Art hay Business) không ảnh hưởng nhiều đến quyết định nhảy việc. Điều này gợi ý rằng biến này có thể không quan trọng lắm cho mô hình.\n",
     "4. `experience` (Số năm kinh nghiệm): thấy cột <1 cao và cột >20 thấp cho thấy kinh nghiệm càng ít, tỷ lệ nhảy việc càng cao."
    ]
   },
@@ -1115,6 +1156,7 @@
     "\n",
     "- Data Types: nhiều biến định lượng (numerical) đang bị lưu dưới dạng chuỗi (object) như `experience` ('>20', '<1') và `last_new_job`. Cần phải chuyển đổi về dạng số để mô hình hiểu được tính thứ bậc.\n",
     "- Dữ liệu rác/thừa: Cột enrollee_id là mã định danh vô nghĩa trong mô hình hóa.\n",
+    "- Sai logic: trường hợp `last_new_job > experience`. Không thể nào số năm giữa 2 công việc trước và hiện tại lại lớn hơn kinh nghiệm của ứng viên được.\n",
     "\n",
     "2. Về Đặc điểm Phân phối\n",
     "- Mất cân bằng dữ liệu (Class Imbalance): Biến mục tiêu target bị lệch đáng kể (75% không đổi việc vs 25% đổi việc). Đây là thách thức chính cho độ chính xác của mô hình.\n",
