--- a/notebooks/02_preprocessing.ipynb
+++ b/notebooks/02_preprocessing.ipynb
@@ -7,8 +7,20 @@
    "source": [
     "## Tổng quan\n",
     "\n",
-    "- Sau khi đã khám phá dữ liệu ban đầu thì chúng ta nhận thấy dataset còn nhiều missing value cần phải giải quyết cũng như là còn một số cột chứa giá trị chưa thống nhất nhau (`experience`, `company_size`, `last_new_job`).\n",
-    "- Bước tiếp theo sẽ là tiền xử lý dữ liệu để đảm bảo dữ liệu sạch, có thể đem đi train mô hình và trả lời các câu hỏi đặt ra chuẩn xác hơn."
+    "Chiến lược để tiền xử lý dữ liệu khi đã khám phá dữ liệu cụ thể như sau:\n",
+    "1. Data Cleaning\n",
+    "- Xóa cột `enrollee_id`\n",
+    "- Chỉnh sửa định dạng: sau khi sửa cần chuẩn hóa kiểu dữ liệu sang số\n",
+    "    + Cột `experience`: chuyển '<1', '>20' sang định dạng số phù hợp\n",
+    "    + Cột `company_size`: chuyển '10/49', '100-500', '1000-4999',... sang định dạng số phù hợp \n",
+    "    + Cột `last_new_job`: chuyển '>4', 'never' sang định dạng số phù hợp\n",
+    "- Xử lý trường hợp `last_new_job > experience`\n",
+    "- Xử lý missing values: \n",
+    "    + Với các cột `company_type, enrolled_university, education_level, gender, major_discipline`: Điền giá trị mới là \"Unknown\" vào các giá trị bị thiếu\n",
+    "    + Với các cột `experience, company_size, last_new_job`: điền giá trị thiếu bằng giá trị trung vị(median)\n",
+    "- Xử lý giá trị ngoại lai(Outliers): áp dụng IQR Capping cho cột `training_hours`\n",
+    "\n",
+    "2. Feature Engineering: tạo thêm khoảng 3 đến 4 feature mới\n"
    ]
   },
   {
@@ -131,40 +143,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c6c80c54",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{np.str_('city'): 0,\n",
-       " np.str_('city_development_index'): 1,\n",
-       " np.str_('relevent_experience'): 2,\n",
-       " np.str_('enrolled_university'): 3,\n",
-       " np.str_('education_level'): 4,\n",
-       " np.str_('major_discipline'): 5,\n",
-       " np.str_('experience'): 6,\n",
-       " np.str_('company_size'): 7,\n",
-       " np.str_('company_type'): 8,\n",
-       " np.str_('last_new_job'): 9,\n",
-       " np.str_('training_hours'): 10,\n",
-       " np.str_('target'): 11}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Features:\n",
+      "['city' 'city_development_index' 'gender' 'relevent_experience'\n",
+      " 'enrolled_university' 'education_level' 'major_discipline' 'experience'\n",
+      " 'company_size' 'company_type' 'last_new_job' 'training_hours' 'target']\n"
+     ]
     }
    ],
    "source": [
-    "# Xóa 2 cột 'enrollee_id' và 'gender'\n",
-    "index_to_delete = [col_idx['enrollee_id'], col_idx['gender']]\n",
-    "data = np.delete(data, index_to_delete, axis=1)\n",
+    "# Xóa cột 'enrollee_id'\n",
+    "if 'enrollee_id' in header:\n",
+    "    index_to_delete = col_idx['enrollee_id']\n",
+    "    data = np.delete(data, index_to_delete, axis=1)\n",
     "\n",
-    "# Cập nhật lại header và col_idx\n",
-    "header = new_arr = np.delete(header, index_to_delete)\n",
-    "col_idx = {name: i for i, name in enumerate(header)} "
+    "    # Cập nhật lại header và col_idx\n",
+    "    header = new_arr = np.delete(header, index_to_delete)\n",
+    "    col_idx = {name: i for i, name in enumerate(header)} \n",
+    "\n",
+    "print(\"Features:\")\n",
+    "print(header)\n"
    ]
   },
   {
@@ -184,7 +189,9 @@
     "\n",
     "- Đối với cột `experience`: chúng ta thấy giá trị của cột này còn chứa các giá trị chuỗi như '<1' và '>20' — trước tiên, hãy chuyển đổi tất cả các giá trị này sang định dạng số phù hợp. Các giá trị thiếu sẽ được thay thế bằng giá trị trung vị.\n",
     "- Đối với cột `company_size`: chúng ta thấy giá trị của cột này còn chứa các giá trị chuỗi như '50-99', '<10', '10000+', '5000-9999', '1000-4999', '10/49', '100-500', '500-999' — trước tiên, hãy chuyển đổi tất cả các giá trị này sang định dạng số phù hợp. Các giá trị thiếu sẽ được thay thế bằng giá trị trung vị.\n",
-    "- Đối với cột `last_new_job`: chúng ta thấy giá trị của cột này còn chứa các giá trị chuỗi như '>4' và 'never' — trước tiên, hãy chuyển đổi tất cả các giá trị này sang định dạng số phù hợp. Các giá trị thiếu sẽ được thay thế bằng giá trị trung vị."
+    "- Đối với cột `last_new_job`: chúng ta thấy giá trị của cột này còn chứa các giá trị chuỗi như '>4' và 'never' — trước tiên, hãy chuyển đổi tất cả các giá trị này sang định dạng số phù hợp. Các giá trị thiếu sẽ được thay thế bằng giá trị trung vị.\n",
+    "\n",
+    "Xử lý trường hợp `last_new_job > experience`: chúng ta sẽ thay giá trị của last_new_job bằng experience"
    ]
   },
   {
@@ -209,7 +216,18 @@
     "    col_float[np.isnan(col_float)] = median_val\n",
     "    \n",
     "    # data đang là mảng string, nên phải ép kiểu số về string trước khi lưu lại vào data\n",
-    "    data[:, idx] = col_float.astype(str)"
+    "    data[:, idx] = col_float.astype(str)\n",
+    "\n",
+    "# Sửa lại giá trị không hợp lý last_new_job > experience\n",
+    "idx_exp = col_idx['experience']\n",
+    "idx_job = col_idx['last_new_job']\n",
+    "\n",
+    "exp_vals = data[:, idx_exp].astype(float)\n",
+    "job_vals = data[:, idx_job].astype(float)\n",
+    "\n",
+    "error_mask = job_vals > exp_vals\n",
+    "job_vals[error_mask] = exp_vals[error_mask]\n",
+    "data[:, idx_job] = job_vals.astype(str)"
    ]
   },
   {
@@ -227,7 +245,7 @@
    "source": [
     "Để giải quyết các giá trị bị thiếu của mỗi cột có kiểu dữ liệu dạng phân loại, chúng ta có thể thực hiện như sau:\n",
     "\n",
-    "- Đối với các cột `enrolled_university`, `education_level`, `major_discipline`, `company_type`: các giá trị thiếu được thay thế bằng 'Unknown' "
+    "- Đối với các cột `gender, enrolled_university, education_level, major_discipline, company_type`: các giá trị thiếu được thay thế bằng 'Unknown' "
    ]
   },
   {
@@ -237,7 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "categorical_cols = ['enrolled_university', 'education_level', \n",
+    "categorical_cols = ['gender','enrolled_university', 'education_level', \n",
     "                    'major_discipline', 'company_type']\n",
     "\n",
     "cat_idxs = [col_idx[name] for name in categorical_cols]\n",
@@ -247,7 +265,7 @@
     "sub_data[sub_data == 'nan'] = 'Unknown'\n",
     "\n",
     "# Gán vào lại data\n",
-    "data[:, cat_idxs] = sub_data\n"
+    "data[:, cat_idxs] = sub_data"
    ]
   },
   {
@@ -279,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "b2599f56",
    "metadata": {},
    "outputs": [
@@ -323,6 +341,8 @@
       " '0.903' '0.91' '0.9129999999999999' '0.915' '0.92' '0.9209999999999999'\n",
       " '0.9229999999999999' '0.924' '0.925' '0.9259999999999999'\n",
       " '0.9390000000000001' '0.9490000000000001']\n",
+      "Cột gender:\n",
+      "['Female' 'Male' 'Other' 'Unknown']\n",
       "Cột relevent_experience:\n",
       "['Has relevent experience' 'No relevent experience']\n",
       "Cột enrolled_university:\n",
@@ -363,7 +383,19 @@
       " '88.0' '89.0' '9.0' '90.0' '91.0' '92.0' '94.0' '95.0' '96.0' '97.0'\n",
       " '98.0' '99.0']\n",
       "Cột target:\n",
-      "['0.0' '1.0']\n"
+      "['0.0' '1.0']\n",
+      "Cột is_stem_major:\n",
+      "['0.0' '1.0']\n",
+      "Cột experience_level:\n",
+      "['0.0' '1.0' '2.0' '3.0']\n",
+      "Cột is_active_learner:\n",
+      "['0.0' '1.0']\n",
+      "Cột stability_col:\n",
+      "['0.0' '0.05' '0.06' '0.07' '0.08' '0.09' '0.1' '0.11' '0.12' '0.13'\n",
+      " '0.14' '0.15' '0.16' '0.17' '0.18' '0.19' '0.2' '0.21' '0.22' '0.23'\n",
+      " '0.24' '0.25' '0.26' '0.27' '0.28' '0.29' '0.3' '0.31' '0.33' '0.36'\n",
+      " '0.38' '0.4' '0.42' '0.43' '0.44' '0.45' '0.5' '0.56' '0.57' '0.6' '0.62'\n",
+      " '0.67' '0.71' '0.75' '0.8' '0.83' '1.0']\n"
      ]
     }
    ],
@@ -389,15 +421,36 @@
     "Tạo thêm các feature mới:\n",
     "- `is_active_learner`: Đây là tín hiệu hành vi rõ ràng nhất. Một người đang đi học (Full time/Part time) thì khả năng cực cao họ sẽ tìm việc mới sau khi tốt nghiệp. Ngược lại, người no_enrollment thường đang ổn định.\n",
     "- `experience_level`:  Hành vi của Junior và Senior rất khác nhau. Junior hay nhảy việc để tăng lương/học hỏi. Senior thường ngại thay đổi. Việc chia nhóm giúp Model bắt được quy luật này tốt hơn là để số lẻ.\n",
-    "- `is_stem_major`: Vì là tuyển dụng Data Scientist. Người có nền tảng STEM (Toán, Kỹ thuật) là đối tượng chính. Những ngành khác (Arts, Humanities) thường là chuyển ngành, hành vi tìm việc của họ sẽ khác."
+    "- `is_stem_major`: Vì là tuyển dụng Data Scientist. Người có nền tảng STEM (Toán, Kỹ thuật) là đối tượng chính. Những ngành khác (Arts, Humanities) thường là chuyển ngành, hành vi tìm việc của họ sẽ khác.\n",
+    "- `stability_ratio`: Đây sẽ là một feature để xem một ứng viên có trung thành với công việc không, công thức sẽ là `stability_ratio = last_new_job / experience`. Nếu như ứng viên đó có stability_ratio gần bằng 1 nghĩa là rất trung thành, còn stability_ratio quá thấp nghĩa là ứng viên này hay nhảy việc."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "bf14ebeb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Giá trị của từng feature mới là\n",
+      "Cột is_stem_major:\n",
+      "['0.0' '1.0']\n",
+      "Cột experience_level:\n",
+      "['0.0' '1.0' '2.0' '3.0']\n",
+      "Cột is_active_learner:\n",
+      "['0.0' '1.0']\n",
+      "Cột stability_col:\n",
+      "['0.0' '0.05' '0.06' '0.07' '0.08' '0.09' '0.1' '0.11' '0.12' '0.13'\n",
+      " '0.14' '0.15' '0.16' '0.17' '0.18' '0.19' '0.2' '0.21' '0.22' '0.23'\n",
+      " '0.24' '0.25' '0.26' '0.27' '0.28' '0.29' '0.3' '0.31' '0.33' '0.36'\n",
+      " '0.38' '0.4' '0.42' '0.43' '0.44' '0.45' '0.5' '0.56' '0.57' '0.6' '0.62'\n",
+      " '0.67' '0.71' '0.75' '0.8' '0.83' '1.0']\n"
+     ]
+    }
+   ],
    "source": [
     "# Feature: is_stem_major\n",
     "raw_major = data[:, col_idx['major_discipline']]\n",
@@ -411,11 +464,24 @@
     "raw_enroll = data[:, col_idx['enrolled_university']]\n",
     "is_learner = dp.create_enrollment_status(raw_enroll)\n",
     "\n",
-    "new_features = np.column_stack((is_stem, exp_level, is_learner))\n",
+    "# Feature: stability_ratio\n",
+    "job_float = data[:, col_idx['last_new_job']].astype(float)\n",
+    "exp_float = data[:, col_idx['experience']].astype(float)\n",
+    "stability_col = dp.create_stability_ratio(job_float, exp_float)\n",
     "\n",
-    "data = np.hstack((data, new_features.astype(str)))\n",
+    "if 'is_stem_major' and 'experience_level' and 'is_active_learner' and 'stability_col' not in header:\n",
     "\n",
-    "header = np.append(header, ['is_stem_major', 'experience_level', 'is_active_learner'])\n"
+    "    new_features = np.column_stack((is_stem, exp_level, is_learner, stability_col))\n",
+    "\n",
+    "    data = np.hstack((data, new_features.astype(str)))\n",
+    "\n",
+    "    header = np.append(header, ['is_stem_major', 'experience_level', 'is_active_learner', 'stability_col'])\n",
+    "    col_idx = {name: i for i, name in enumerate(header)}\n",
+    "\n",
+    "print(\"Giá trị của từng feature mới là\")\n",
+    "for h in ['is_stem_major', 'experience_level', 'is_active_learner', 'stability_col']:\n",
+    "    print(f\"Cột {h}:\")\n",
+    "    print(np.unique(data[:, col_idx[h]]))"
    ]
   },
   {
