Trả lời một số câu hỏi để hiểu dữ liệu sau khi xữ lý

--- a/notebooks/01_data_exploration.ipynb
+++ b/notebooks/01_data_exploration.ipynb
@@ -42,9 +42,7 @@
    "source": [
     "1. Những yếu tố nào ảnh hưởng đến quyết định đổi công việc của ứng viên?\n",
     "2. Đa số ứng viên trong tập dữ liệu này đến từ đâu (Thành phố nào)? Trình độ học vấn phổ biến là gì?\n",
-    "3. Tỷ lệ giữa người muốn nghỉ việc và người ở lại là bao nhiêu? Dữ liệu có bị mất cân bằng nghiêm trọng không?\n",
-    "4. Những cột dữ liệu nào bị thiếu nhiều nhất? Liệu việc thiếu này là ngẫu nhiên hay có quy luật?\n",
-    "5. Bài toán cần dự đoán điều gì? Ứng viên có đang tìm việc để rời công ty hiện tại hay không?"
+    "3. Bài toán cần dự đoán điều gì? Ứng viên có đang tìm việc để rời công ty hiện tại hay không?"
    ]
   },
   {
@@ -57,26 +55,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f98fc0be",
-   "metadata": {},
-   "source": [
-    "## Setup đường dẫn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "aff48de8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "import os\n",
-    "sys.path.append(os.path.abspath('..'))  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "418885e0",
    "metadata": {},
    "source": [
@@ -85,11 +63,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "cd2dd39b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath('..'))  #setup đường dẫn\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -602,7 +584,7 @@
     "- Nhóm thiếu nghiệm trọng (>30%):`company_type` và `company_size`\n",
     "- Nhóm thiếu trung bình (10% - 25%): `gender` và `major_discipline`\n",
     "- Nhóm thiếu ít (< 3%): `enrolled_university`, `education_level`, `last_new_job`, `experience`  \n",
-    "Chúng ta thay thế giá trị thiếu bằng cách thêm 'Unknown' vào các cột chứa giá trị là chuỗi, còn các cột chứa giá trị số thì nên thay bằng median.\n",
+    "Chiến lược là thay thế giá trị thiếu bằng cách thêm 'Unknown' vào các cột chứa giá trị là chuỗi, còn các cột chứa giá trị số thì nên thay bằng median.\n",
     "2. Về kiểu dữ liệu\n",
     "Có nhiều cột đang ở dạng object (chuỗi) nhưng bản chất lại mang ý nghĩa thứ tự hoặc số học, cần phải chuyển đổi để đưa vào mô hình:\n",
     "- `experience`: Đang là object vì chứa các giá trị như '>20', '<1'. Cần xử lý các ký tự >, < để chuyển sang dạng số.\n",
@@ -1013,7 +995,7 @@
    "metadata": {},
    "source": [
     "#### Tương quan giữa các biến số (Correlation Heatmap)\n",
-    "Chúng ta sẽ xem xét mối quan hệ giữa 3 biến số quan trọng nhất: `city_development_index`, `training_hours`, và `target`."
+    "Hãy xem xét mối quan hệ giữa 3 biến số quan trọng nhất: `city_development_index`, `training_hours`, và `target`."
    ]
   },
   {
