--- a/notebooks/02_preprocessing.ipynb
+++ b/notebooks/02_preprocessing.ipynb
@@ -25,26 +25,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74d14bcf",
-   "metadata": {},
-   "source": [
-    "## Setup đường dẫn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "346d6853",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "import os\n",
-    "sys.path.append(os.path.abspath('..'))  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "92a58ca4",
    "metadata": {},
    "source": [
@@ -53,11 +33,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2a0040ed",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath('..'))  #setup đường dẫn\n",
+    "\n",
     "import numpy as np\n",
     "\n",
     "import src.data_processing as dp"
@@ -81,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "57afe6e2",
    "metadata": {},
    "outputs": [
@@ -143,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c6c80c54",
    "metadata": {},
    "outputs": [
@@ -185,18 +169,18 @@
    "id": "b6f8b850",
    "metadata": {},
    "source": [
-    "Để giải quyết các giá trị bị thiếu của mỗi cột có kiểu dữ liệu dạng số, chúng ta có thể thực hiện như sau:\n",
+    "Để giải quyết các giá trị bị thiếu của mỗi cột có kiểu dữ liệu dạng số, có thể thực hiện như sau:\n",
     "\n",
-    "- Đối với cột `experience`: chúng ta thấy giá trị của cột này còn chứa các giá trị chuỗi như '<1' và '>20' — trước tiên, hãy chuyển đổi tất cả các giá trị này sang định dạng số phù hợp. Các giá trị thiếu sẽ được thay thế bằng giá trị trung vị.\n",
-    "- Đối với cột `company_size`: chúng ta thấy giá trị của cột này còn chứa các giá trị chuỗi như '50-99', '<10', '10000+', '5000-9999', '1000-4999', '10/49', '100-500', '500-999' — trước tiên, hãy chuyển đổi tất cả các giá trị này sang định dạng số phù hợp. Các giá trị thiếu sẽ được thay thế bằng giá trị trung vị.\n",
-    "- Đối với cột `last_new_job`: chúng ta thấy giá trị của cột này còn chứa các giá trị chuỗi như '>4' và 'never' — trước tiên, hãy chuyển đổi tất cả các giá trị này sang định dạng số phù hợp. Các giá trị thiếu sẽ được thay thế bằng giá trị trung vị.\n",
+    "- Đối với cột `experience`: giá trị của cột này còn chứa các giá trị chuỗi như '<1' và '>20' — trước tiên, cần chuyển đổi tất cả các giá trị này sang định dạng số phù hợp. Các giá trị thiếu sẽ được thay thế bằng giá trị trung vị.\n",
+    "- Đối với cột `company_size`: giá trị của cột này còn chứa các giá trị chuỗi như '50-99', '<10', '10000+', '5000-9999', '1000-4999', '10/49', '100-500', '500-999' — trước tiên, cần chuyển đổi tất cả các giá trị này sang định dạng số phù hợp. Các giá trị thiếu sẽ được thay thế bằng giá trị trung vị.\n",
+    "- Đối với cột `last_new_job`: giá trị của cột này còn chứa các giá trị chuỗi như '>4' và 'never' — trước tiên, cần chuyển đổi tất cả các giá trị này sang định dạng số phù hợp. Các giá trị thiếu sẽ được thay thế bằng giá trị trung vị.\n",
     "\n",
-    "Xử lý trường hợp `last_new_job > experience`: chúng ta sẽ thay giá trị của last_new_job bằng experience"
+    "Xử lý trường hợp `last_new_job > experience`: bằng cách thay giá trị của last_new_job bằng experience"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "74bc87e9",
    "metadata": {},
    "outputs": [],
@@ -243,14 +227,14 @@
    "id": "5058de1a",
    "metadata": {},
    "source": [
-    "Để giải quyết các giá trị bị thiếu của mỗi cột có kiểu dữ liệu dạng phân loại, chúng ta có thể thực hiện như sau:\n",
+    "Để giải quyết các giá trị bị thiếu của mỗi cột có kiểu dữ liệu dạng phân loại, có thể thực hiện như sau:\n",
     "\n",
     "- Đối với các cột `gender, enrolled_university, education_level, major_discipline, company_type`: các giá trị thiếu được thay thế bằng 'Unknown' "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b6abdc9f",
    "metadata": {},
    "outputs": [],
@@ -278,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "ccf4dcbd",
    "metadata": {},
    "outputs": [],
@@ -297,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "b2599f56",
    "metadata": {},
    "outputs": [
@@ -383,19 +367,7 @@
       " '88.0' '89.0' '9.0' '90.0' '91.0' '92.0' '94.0' '95.0' '96.0' '97.0'\n",
       " '98.0' '99.0']\n",
       "Cột target:\n",
-      "['0.0' '1.0']\n",
-      "Cột is_stem_major:\n",
-      "['0.0' '1.0']\n",
-      "Cột experience_level:\n",
-      "['0.0' '1.0' '2.0' '3.0']\n",
-      "Cột is_active_learner:\n",
-      "['0.0' '1.0']\n",
-      "Cột stability_col:\n",
-      "['0.0' '0.05' '0.06' '0.07' '0.08' '0.09' '0.1' '0.11' '0.12' '0.13'\n",
-      " '0.14' '0.15' '0.16' '0.17' '0.18' '0.19' '0.2' '0.21' '0.22' '0.23'\n",
-      " '0.24' '0.25' '0.26' '0.27' '0.28' '0.29' '0.3' '0.31' '0.33' '0.36'\n",
-      " '0.38' '0.4' '0.42' '0.43' '0.44' '0.45' '0.5' '0.56' '0.57' '0.6' '0.62'\n",
-      " '0.67' '0.71' '0.75' '0.8' '0.83' '1.0']\n"
+      "['0.0' '1.0']\n"
      ]
     }
    ],
@@ -427,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "bf14ebeb",
    "metadata": {},
    "outputs": [
@@ -435,6 +407,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[0 0 1 ... 0 0 0]\n",
       "Giá trị của từng feature mới là\n",
       "Cột is_stem_major:\n",
       "['0.0' '1.0']\n",
@@ -456,14 +429,14 @@
     "raw_major = data[:, col_idx['major_discipline']]\n",
     "is_stem = dp.create_is_stem(raw_major) \n",
     "\n",
-    "# Feature: experience_level (0: Junior, 1: Mid, 2: Senior)\n",
+    "# Feature: experience_level (0: Junior, 1: Mid, 2: Senior, 3: Expert)\n",
     "exp_float = data[:, col_idx['experience']].astype(float)\n",
     "exp_level = dp.create_experience_level(exp_float)\n",
     "\n",
     "# Feature: is_active_learner (Đang đi học)\n",
     "raw_enroll = data[:, col_idx['enrolled_university']]\n",
     "is_learner = dp.create_enrollment_status(raw_enroll)\n",
-    "\n",
+    "print(is_learner)\n",
     "# Feature: stability_ratio\n",
     "job_float = data[:, col_idx['last_new_job']].astype(float)\n",
     "exp_float = data[:, col_idx['experience']].astype(float)\n",
@@ -494,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "7857935b",
    "metadata": {},
    "outputs": [
@@ -510,6 +483,20 @@
     "output_path = \"../data/processed/aug_train_processed.csv\"\n",
     "\n",
     "dp.save_to_csv(data, header, output_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b52e9ba",
+   "metadata": {},
+   "source": [
+    "## Tổng kết và Kết luận\n",
+    "\n",
+    "Hiện tại, tôi đã xử lý được dữ liệu từ một số chiến lược đề ra và lưu ra file, file `aug_train_processed.csv` này đang có một dataset sạch để có thể dùng để:\n",
+    "- Phân tích và trả lời một số câu hỏi để hiểu sâu về dữ liệu\n",
+    "- Kiểm định giả thuyết thống kê  \n",
+    "\n",
+    "Việc xử lý dữ liệu còn cần phải triển khai thêm khi thực hiện modeling"
    ]
   }
  ],
