--- a/notebooks/01_data_exploration.ipynb
+++ b/notebooks/01_data_exploration.ipynb
@@ -643,7 +643,7 @@
     "- Biến mục tiêu (target) - Quan trọng nhất: đây là biến phân loại (0: Không đổi việc, 1: Có ý định đổi việc)\n",
     "    + Có khoảng 24.9% ứng viên có ý định chuyển việc.\n",
     "    + Có khoảng 75.1% ứng viên không có ý định chuyển việc.\n",
-    "    + Đây là một bộ dữ liệu mất cân bằng (imbalanced dataset). Khi xây dựng mô hình Machine Learning (như Classification), bạn sẽ cần lưu ý các kỹ thuật xử lý mất cân bằng mẫu (như SMOTE, class weights) hoặc chọn metric đánh giá phù hợp (như F1-Score, AUC thay vì Accuracy).\n",
+    "    + Đây là một bộ dữ liệu mất cân bằng (imbalanced dataset). Khi xây dựng mô hình Machine Learning, sẽ cần lưu ý các kỹ thuật xử lý mất cân bằng mẫu (như SMOTE, class weights) hoặc chọn metric đánh giá phù hợp (như F1-Score, AUC thay vì Accuracy).\n",
     "- Chỉ số phát triển thành phố (city_development_index):\n",
     "    + Dải giá trị: Từ 0.448 đến 0.949.\n",
     "    + So sánh Mean (0.828) và Median (50% - 0.903): Median cao hơn đáng kể so với Mean, điều này cho thấy phân phối dữ liệu bị lệch trái (Left-skewed/Negative skew).\n",
